--- a/.github/workflows/glue.yml
+++ b/.github/workflows/glue.yml
@@ -16,5 +16,6 @@ jobs:
     with:
       environment: ${{inputs.environment}}
       role_name: ${{startsWith(inputs.environment, 'prod') && 'push-glue' || 'copy-glue'}}
+      identifier: ${{startsWith(inputs.environment, 'prod') && 'main' || 'bio'}}
     secrets:
       AWS_ACCOUNT_ID: ${{secrets.AWS_ACCOUNT_ID}}
