--- a/.github/workflows/terraform-plan.yml
+++ b/.github/workflows/terraform-plan.yml
@@ -26,7 +26,7 @@ env:
 
 jobs:
   terraform:
-    name: 'Terraform'
+    name: 'Terraform plan'
     runs-on: ubuntu-latest
     environment: ${{inputs.environment}}
     defaults:
@@ -57,8 +57,7 @@ jobs:
           --backend-config="region=${{vars.AWS_REGION}}" \
           --backend-config="bucket=${{secrets.TF_VAR_BACKEND_BUCKET}}" \
           --backend-config="dynamodb_table=tf-backend-lock-${{vars.PROJECT_NAME}}-${{inputs.environment}}" \
-          --backend-config="key=${{github.repository}}/terraform.tfstate"
-
+          --backend-config="key=${{github.repository}}/terraform.tfstate" 
     #Doing terraform stuff
     - name: Terraform planning
       run: |
