--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -15,6 +15,7 @@ definitions:
         - export AWS_WEB_IDENTITY_TOKEN_FILE=$(pwd)/web-identity-token
         - echo $BITBUCKET_STEP_OIDC_TOKEN > $(pwd)/web-identity-token
         - cd ./devops/envs/prod-unicc
+        - sed -i "s|https://github.com/finddx/|git@bitbucket.org:awsopda/who-|" *.tf
         - >
           terraform init 
           --backend-config="region=$TF_VAR_aws_region"
@@ -34,6 +35,7 @@ definitions:
         - export AWS_WEB_IDENTITY_TOKEN_FILE=$(pwd)/web-identity-token
         - echo $BITBUCKET_STEP_OIDC_TOKEN > $(pwd)/web-identity-token
         - cd ./devops/envs/prod-unicc
+        - sed -i "s|https://github.com/finddx/|git@bitbucket.org:awsopda/who-|" *.tf
         - >
           terraform init 
           --backend-config="region=$TF_VAR_aws_region"
@@ -53,6 +55,7 @@ definitions:
         - export AWS_WEB_IDENTITY_TOKEN_FILE=$(pwd)/web-identity-token
         - echo $BITBUCKET_STEP_OIDC_TOKEN > $(pwd)/web-identity-token
         - cd ./devops/envs/prod-unicc
+        - sed -i "s|https://github.com/finddx/|git@bitbucket.org:awsopda/who-|" *.tf
         - >
           terraform init 
           --backend-config="region=$TF_VAR_aws_region"
